--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "next": "14.2.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "@google/generative-ai": "^0.20.0"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
