--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@google/generative-ai": "^0.20.0"
+    "@google/generative-ai": "^0.20.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
