--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "18.3.1",
     "@google/generative-ai": "^0.20.0",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16"
